Updated through Lesson 31

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -265,11 +265,13 @@ This page includes schedule for the Fall 2025 semester, along with all the assig
 |         |                                                      |                                                                                                                                 |              |                                                                                                                      |
 |         |                                                      |         -   Sections 7.3 and 7.4                                                                                                |              |                                                                                                                      |
 |         |                                                      |                                                                                                                                 |              |                                                                                                                      |
-|         |                                                      | -   Reading Guide for Lesson 30                                                                                                 |              |                                                                                                                      |
-+---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
-| 31      | Train-Test Paradigm                                  | -   READ:                                                                                                                       | -   GPset 31 |                                                                                                                      |
+|         |                                                      |         -   Review the rest of the chapter from Lesson 29 reading as well                                                       |              |                                                                                                                      |
 |         |                                                      |                                                                                                                                 |              |                                                                                                                      |
-|         |                                                      | -   Reading Guide for Lesson 31                                                                                                 |              |                                                                                                                      |
+|         |                                                      | -   [Reading Guide for Lesson 30](https://notebooklm.google.com/notebook/21876e79-e810-4c85-9aed-21adc8b527e2){target="_blank"} |              |                                                                                                                      |
++---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
+| 31      | Train-Test Paradigm                                  | -   No assigned reading for Lesson 31                                                                                           | -   GPset 31 |                                                                                                                      |
+|         |                                                      |                                                                                                                                 |              |                                                                                                                      |
+|         |                                                      | -   No reading guide for Lesson 31                                                                                              |              |                                                                                                                      |
 +---------+------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------+--------------+----------------------------------------------------------------------------------------------------------------------+
 | 32      | Multiple Regression (parallel slopes)                | -   READ:                                                                                                                       | -   GPset 32 | -   HW7                                                                                                              |
 |         |                                                      |                                                                                                                                 |              |                                                                                                                      |
