New instructor slides, project info, and updates for Spring 2026

--- a/about.qmd
+++ b/about.qmd
@@ -6,23 +6,29 @@ title: "About FD3M"
 
 The instructors for this course are listed below. Click on each instructor's name to view more information about them. You can also find the [DFMS floor plan](DFMS%20Floor%20Plan.pdf){target="_blank"}, with instructor office's highlighted.
 
--   [Dr. Brianna Hitt](DFMS%20Hitt%20Slide.pdf "Get to know Dr. Hitt"){target="_blank"} (course director), Office 6D-140
+-   [Dr. Brianna Hitt](DFMS Hitt Slide.pdf) (course director), Office 6D-140
 
--   [Dr. Jessica Hauschild](DFMS%20Hauschild%20Slide.pdf "Get to know Dr. Hauschild"){target="_blank"}, Office 6D-186
+-   [Dr. Beth Schaubroeck](DFMS Schaubroeck Slide.pdf), Office 6D-112
 
--   [Lt Col Harris Butler](DFMS%20Butler%20Slide.pdf "Get to know Lt Col Butler"){target="_blank"}, Office 6D-104
+-   [Col Scott Williams](DFMS Williams Slide.pdf), Office 6D-100
 
--   [Maj Justin Merrick](DFMS%20Merrick%20Slide.pdf "Get to know Maj Merrick"){target="_blank"}, Office 6D-198
+-   [Lt Col Harris Butler](DFMS Butler Slide.pdf), Office 6D-104
+
+-   [Lt Col Rob Newton](DFMS Newton Slide.pdf), Office 6D-218
+
+-   [Lt Col Will Adorno](DFMS Adorno Slide.pdf), Office 6D-242
+
+-   [Capt Alex Contarino](DFMS Contarino Slide.pdf), Office 6D-106
 
 ## Course Letter
 
-Below we highlight sections from the Math 300Z/356Z/377Z Fall 2025 course letter. All cadets are responsible for reading the [full version of the course letter](Math%20300Z%20356Z%20377Z%20Fall%202025%20Course%20Letter.pdf){target="_blank"}.
+Below we highlight sections from the Math 300Z/356Z/377Z Fall 2025 course letter. All cadets are responsible for reading the [full version of the course letter](Math Z Spring 2026 Course Materials 05January2026){target="_blank"}.
 
 ### Introduction
 
-Welcome to Math 300Z/356Z/377Z, *Foundations in Data-Driven Decision Making & Statistical Thinking (FD3M)*. This course is designed to provide you with statistical, mathematical and computational tools to answer questions from data by providing a solid foundation in probability and a strong introduction to statistical and descriptive modeling. This is the second iteration of this experimental course, which seeks to become the new core statistics and data science course for all cadets at USAFA.
+Welcome to Math 300Z/356Z, *Data-Driven Statistics with AI*. This course is designed to provide you with statistical, mathematical and computational tools to answer questions from data by providing a solid foundation in probability and a strong introduction to statistical and descriptive modeling. This is the third iteration of this course, which will become the new core statistics and data science course for all cadets at USAFA starting in Fall 2026.
 
-***Course Identity:*** You are now a statistician and a data-driven decision maker!
+***Course Identity:*** You are now, just by being here, a statistician and a data-driven decision maker!
 
 ### Learning Goals
 
@@ -38,9 +44,10 @@ The learning goals for this course are to use computational and mathematical sta
 
 -   Detail the basics of the machine learning pipeline, specifically how it relates to linear regression.
 
-### Experimental Section
+### Updated Course
 
-This is an experimental course in data science and statistics that seeks to replace the current three courses in the USAFA core fulfilling the statistical reasoning requirement. This course aims to provide a common experience for cadets while meeting The Department of the Air Force’s articulated several priorities for Airmen and Guardians regarding data acumen. As such, this course will meet all graduation requirements for your major and is designed with your future as officers keenly in mind.
+This course in data science and statistics is replacing the current four courses in the core
+fulfilling the statistical reasoning requirement. This course aims to provide a common experience for cadets while meeting The Department of the Air Force’s articulated several priorities for Airmen and Guardians regarding data acumen. As such, this course will meet all graduation requirements for your major and is designed with your future as officers keenly in mind.
 
 ### Course Materials
 
@@ -50,44 +57,68 @@ In addition to assigned course readings and activities, we will utilize Generati
 
 **Course Text**.  The readings for this course will come from four digitally available textbooks:
 
--   **David Diez,** **Mine Cetinkaya-Rundel, and Christopher D. Barr.** OpenIntro Statistics, 4^th^ Edition. Free PDF available at [https://openintro.org/book/os/.](https://openintro.org/book/os/)
+-   **David Diez,** **Mine Cetinkaya-Rundel, and Christopher D. Barr.** OpenIntro Statistics, 4^th^ Edition. Free PDF available at [https://openintro.org/book/os/.](https://openintro.org/book/os/){target="_blank"}
 
--   **Mine Cetinkaya-Rundel and Johanna Hardin**. *Introduction to Modern Statistics*, 2^nd^ Edition. Free web-native version available at <https://www.openintro-ims.netlify.app> (may not work on MissionNet).
+-   **Mine Cetinkaya-Rundel and Johanna Hardin**. *Introduction to Modern Statistics*, 2^nd^ Edition. Free web-native version available at [https://www.openintro-ims.netlify.app](https://www.openintro-ims.netlify.app){.uri target="_blank"} (may not work on MissionNet).
 
--   **Chester Ismay, Albert Y. Kim, and Arturo Valdivia**. *Modern Dive (v2).* Free e-book available at <https://moderndive.com/v2/>.
+-   **Chester Ismay, Albert Y. Kim, and Arturo Valdivia**. *Modern Dive (v2).* Free e-book available at [https://moderndive.com/v2/](https://moderndive.com/v2/){.uri target="_blank"}.
 
--   **Bradley Warner, Brianna Hitt, and Ken Horton**. *Computational Probability and Statistics*. Free e-book available at <https://ds-usafa.github.io/Quarto-Book/>.
+-   **Bradley Warner, Brianna Hitt, and Ken Horton**. *Computational Probability and Statistics*. Free e-book available at [https://ds-usafa.github.io/Quarto-Book/](https://ds-usafa.github.io/Quarto-Book/){.uri target="_blank"}.
 
 -   *Additional readings provided by the instructor.*
 
 ### Graded Events
 
-Your final grade will be based on how well you achieve the five learning goals for the course. Graded events fall into one of three categories: 1) Core Competencies, 2) Application, and 3) Professional Development. Each medal is assessed with one of four marks:
+This course uses standards-based grading. Your final grade in this course will be based on how well you achieve 30 standards, which fall into one of three categories: 1) Core Competencies, 2) Application, and 3) Professional Development. The following are brief descriptions of the categories and associated graded events. More specific details will be provided at the time these assessments are administered.
 
--   **Gold** – The student understands the material deeply enough to teach to another person.
+1.  **Core Competencies.** There are 12 standards that every student leaving this course should have proficiency with. Students will have at least 2 opportunities to demonstrate their understanding of each standard during Graded Reviews (GRs). There are four GRs and a final exam. Each standard is assessed independently using a standards-based grading approach.
 
--   **Silver** – The student understands the material deeply enough to execute concepts on their own.
+2.  **Application.** There are three components in the application category: i) specialty concepts, ii) semester-long group project, and iii) homework assignments. The application category has 10 standards.
 
--   **Bronze** – The student is making progress towards understanding this concept, but further work is needed.
+3.  **Professional Development.** There are three components in this category: i) professional skills, ii) course participation, and iii) reflection. The professional development category has 8 standards.
 
--   **Cannot Be Assessed** – The student has provided either incoherent evidence of understanding or the medal attempt is incomplete.
+### Proficiency Levels
 
-The following are brief descriptions of the medal categories and the associated graded events. More specific details will be provided at the time these assessments are administered.
+This course uses a contract grading system designed to reward mastery and professional growth. Your grade will be determined based on performance in 30 total standards across the three key areas. Each standard is evaluated on a four-level proficiency scale, where higher levels reflect deeper integration, judgment and communication – not just correctness.
 
-1.  **Core Competencies.** There are 12 concepts that every student leaving this course should have proficiency with. Students will have at least 2 opportunities to demonstrate their understanding of each of these concepts during Graded Reviews (GRs). There are four GRs and a final exam.  Each concept is assessed in isolation from the other concepts using a standards-based grading approach.
+-   **Exceptionally Qualified (EQ)** – The student understands the material deeply enough to teach it to others. This represents a different level of mastery – the ability to explain, critique, and guide others.
 
-2.  **Application.** There are three components in the application category: i) specialty concept medals, ii) semester-long group project, and iii) eight homework assignments. The application category has 10 medals.
+-   **Q1** – The student understands the material deeply enough to apply and interpret the concepts independently and correctly, with only minor or infrequent communication errors.
 
-3.  **Professional Development.** There are three components in this category: i) professional skills, ii) course participation, and iii) reflection. The professional development category has 8 medals.
+-   **Q2** – The student understands the material well enough to apply and interpret the concepts independently most of the time, with occasional minor justification errors.
+
+-   **Q3** – The student demonstrates partial understanding of the material; conceptual gaps, reasoning errors, or major misconceptions are present and must be addressed before the material can be applied reliably.
+
+-   **Cannot Be Assessed** – The student has provided incoherent or incomplete evidence of understanding.
 
 ### Daily Course Rhythm
 
-Each lesson of this course will have a pre-class reading assignment with a reading guide. In class, after a short (10-15 minute) mini-lecture, we will be working with the ideas from the readings in small groups to complete the GPsets. If time permits, we will transition to practice problems in the daily notetaker. After class, in addition to reviewing your own notes from the day, we recommend that you work on the practice problems in the notetakers and come to EI to ask questions. Remember that the homework questions are a selection of the practice problems in the notetakers, and it is strongly recommended that you complete the practice problems as close to their associated lesson as possible.
+Each lesson of this course will have a pre-class reading assignment with an interactive reading guide. We expect you to be conversant with the assigned readings prior to each class. The assigned readings and the associated reading guides are important learning assets, so use them to prepare for class. This course requires regular and active participation from every student.
+
+Bring your computer to every class. For class time to be beneficial, you must be prepared and participate in each lesson. In class, after a short (10-15 minute) mini-lecture, we will be working with the ideas from the readings in small groups to complete the GPsets. If time permits, we will transition to practice problems in the daily notetaker. After class, in addition to reviewing your own notes from the day, we recommend that you work on the practice problems in the notetakers and come to EI to ask questions. Remember that the homework questions are a selection of the practice problems in the notetakers, and it is strongly recommended that you complete the practice problems as close to their associated lesson as possible.
 
 ### Use of Artificial Intelligence/Large Language Models
 
+Unless otherwise stated, your authorized GenAI resources for all Math 300Z/356Z assignments completed outside of class are Level 4: Use of GenAI to co-create and/or revise work per the Dean's Guidance for Academically-related GenAI at USAFA. The authorized resources for all Math 300Z/356Z GRs will be Level 0: No use of GenAI because you need to have a foundation in the course concepts, coding and communicating data analysis.
+
 Please see the course letter for the full policy of use of AI tools in this course.
+
+#### Documentation of GenAI Usage
+
+When utilizing GenAI tools, your documentation statement MUST include the following five parts:
+
+i.  The name of the GenAI tool (and version, when possible)
+
+ii. What you provided the GenAI tool (a summary of your prompts),
+
+iii. What the GenAI tool provided you (a summary of the output)
+
+iv. How you altered the GenAI tool’s output (e.g., how you iterated on prompts or how you edited the response before using it) to be in line with Level 4: Use of GenAI to co-create and/or revise work
+
+v.  A full transcript (link or pdf file) of your interaction with GenAI tools
+
+**Example**: I used ChatGPT to help write code for a scatterplot with a regression line. I asked: “How can I plot a scatterplot of height vs weight in R using ggplot2 and add a regression line?” ChatGPT gave me a full ggplot() code snippet. I edited the code to use my dataset name (cadet_data) and customized axis labels and colors. [https://chatgpt.com/share/6942d3ea-f350-8013-b0a5-55aac51ba119](https://chatgpt.com/share/6942d3ea-f350-8013-b0a5-55aac51ba119){target="_blank"}
 
 ### Final Comments
 
-We are confident in your ability to succeed in this course, but we expect you to have a positive attitude, put in the work and take responsibility for your own learning. Stay engaged, make suggestions for improvement, ask questions, and maintain professionalism. It is up to you what you get from the course. If you have any questions or concerns, please don’t hesitate to ask for help. I’m looking forward to learning and working with you this semester!
+We are confident in your ability to succeed in this course, but we expect you to have a positive attitude, put in the work and take responsibility for your own learning. Stay engaged, make suggestions for improvement, ask questions, and maintain professionalism. It is up to you what you get from the course. If you have any questions or concerns, please don’t hesitate to ask for help. We’re looking forward to learning and working with you this semester!
