--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,10 @@
 ---
-title: "Foundations of Data-Driven Decision-Making and Statistical Thinking"
+title: "Data-Driven Statistics with AI"
 ---
 
 ## Welcome!
 
-This is the course website for the Fall 2025 iteration of Math 300Z/356Z/377Z, Foundations of Data-Driven Decision-Making and Statistical Thinking, or FD3M for short.
-
-![](images/logo.PNG){fig-align="center"}
+This is the course website for the Spring 2026 iteration of Math 300Z/356Z, Data-Driven Statistics with AI.
 
 We've created this website to hold important course information including the course schedule, reading assignments and other graded events, and information for the semester-long project. This information will also be posted to the course Teams page, but we hope this will serve as an easy-to-access hub for this course.
 
@@ -17,4 +15,6 @@ You can find the course letter/course materials on the [About this course](about
 You can find the course schedule with daily reading assignments and other graded events on the [Course schedule](schedule.qmd) page.
 
 You can find information about the semester-long project on the [Course project](course_project.qmd) page.
+
+You can find answers to Frequently Asked Questions on the [FAQs](faqs.qmd) page. 
 
