Updated titles and updated bio slides to open in new browser window

--- a/about.qmd
+++ b/about.qmd
@@ -1,28 +1,28 @@
 ---
-title: "About FD3M"
+title: "About the Course"
 ---
 
 ## Instructors
 
 The instructors for this course are listed below. Click on each instructor's name to view more information about them. You can also find the [DFMS floor plan](DFMS%20Floor%20Plan.pdf){target="_blank"}, with instructor office's highlighted.
 
--   [Dr. Brianna Hitt](DFMS Hitt Slide.pdf) (course director), Office 6D-140
+-   [Dr. Brianna Hitt](DFMS%20Hitt%20Slide.pdf){target="_blank"} (course director), Office 6D-140
 
--   [Dr. Beth Schaubroeck](DFMS Schaubroeck Slide.pdf), Office 6D-112
+-   [Dr. Beth Schaubroeck](DFMS%20Schaubroeck%20Slide.pdf){target="_blank"}, Office 6D-112
 
--   [Col Scott Williams](DFMS Williams Slide.pdf), Office 6D-100
+-   [Col Scott Williams](DFMS%20Williams%20Slide.pdf){target="_blank"}, Office 6D-100
 
--   [Lt Col Harris Butler](DFMS Butler Slide.pdf), Office 6D-104
+-   [Lt Col Harris Butler](DFMS%20Butler%20Slide.pdf){target="_blank"}, Office 6D-104
 
--   [Lt Col Rob Newton](DFMS Newton Slide.pdf), Office 6D-218
+-   [Lt Col Rob Newton](DFMS%20Newton%20Slide.pdf){target="_blank"}, Office 6D-218
 
--   [Lt Col Will Adorno](DFMS Adorno Slide.pdf), Office 6D-242
+-   [Lt Col Will Adorno](DFMS%20Adorno%20Slide.pdf){target="_blank"}, Office 6D-242
 
--   [Capt Alex Contarino](DFMS Contarino Slide.pdf), Office 6D-106
+-   [Capt Alex Contarino](DFMS%20Contarino%20Slide.pdf){target="_blank"}, Office 6D-106
 
 ## Course Letter
 
-Below we highlight sections from the Math 300Z/356Z/377Z Fall 2025 course letter. All cadets are responsible for reading the [full version of the course letter](Math Z Spring 2026 Course Materials 05January2026){target="_blank"}.
+Below we highlight sections from the Math 300Z/356Z Spring 2026 course letter. All cadets are responsible for reading the [full version of the course letter](Math%20Z%20Spring%202026%20Course%20Materials%2005January2026){target="_blank"}.
 
 ### Introduction
 
@@ -46,8 +46,7 @@ The learning goals for this course are to use computational and mathematical sta
 
 ### Updated Course
 
-This course in data science and statistics is replacing the current four courses in the core
-fulfilling the statistical reasoning requirement. This course aims to provide a common experience for cadets while meeting The Department of the Air Force’s articulated several priorities for Airmen and Guardians regarding data acumen. As such, this course will meet all graduation requirements for your major and is designed with your future as officers keenly in mind.
+This course in data science and statistics is replacing the current four courses in the core fulfilling the statistical reasoning requirement. This course aims to provide a common experience for cadets while meeting The Department of the Air Force’s articulated several priorities for Airmen and Guardians regarding data acumen. As such, this course will meet all graduation requirements for your major and is designed with your future as officers keenly in mind.
 
 ### Course Materials
 
